# biohacking-bot

./: .env.example  .gitignore  Dockerfile  LICENSE  PLAN.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
app/: __init__.py  __main__.py
app/core/: config.py  database.py
app/core/clinical/: __init__.py
app/models/: __init__.py  base.py  health.py  logs.py  mixins.py  nutrition.py  user.py
docs/architecture/: 01_architecture_and_rules.md  02_database_schema.md  03_agents_consilium.md  04_telegram_ui_fsm.md  05_roadmap_tasks.md
tests/: __init__.py  conftest.py  test_smoke.py
