[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silabro-biohacking-bot"
version = "0.1.0"
description = "Silabro Biohacking Bot — data-driven Health Advisory Board"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15,<4",
    "asyncpg>=0.30,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "alembic>=1.14,<2",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "weasyprint>=63,<64",
    "Jinja2>=3.1,<4",
    "APScheduler>=3.10,<4",
    "redis[hiredis]>=5.2,<6",
    "tenacity>=9.0,<10",
    "google-generativeai>=0.8,<1",
    "dishka>=1.5,<2",
    "cryptography>=44.0,<45",
    "aiohttp>=3.11,<4",
    "beautifulsoup4>=4.12,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6.0,<7",
    "ruff>=0.8,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
